compiler/lume_parser/src/snapshots/lume_parser__tests__self_snapshots@self_static_call.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"self::invoke();\")"
---
SOURCE_FILE@0..15
  EXPR_STMT@0..15
    STATIC_CALL_EXPR@0..14
      PATH@0..12
        PATH_TYPE@0..4
          NAME@0..4
            IDENT@0..4 "self"
        PATH_SEP@4..6 "::"
        PATH_CALLABLE@6..12
          NAME@6..12
            IDENT@6..12 "invoke"
      ARG_LIST@12..14
        LEFT_PAREN@12..13 "("
        RIGHT_PAREN@13..14 ")"
    SEMICOLON@14..15 ";"
