compiler/lume_parser/src/snapshots/lume_parser__tests__self_snapshots@self_static_generic_call.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"self::invoke<T>();\")"
---
[
    Expression(
        Call(
            Call {
                callee: None,
                name: Path {
                    root: [
                        Type {
                            name: Identifier {
                                name: "self",
                                location: Location(
                                    0..4,
                                ),
                            },
                            bound_types: [],
                            location: Location(
                                0..4,
                            ),
                        },
                    ],
                    name: Callable {
                        name: Identifier {
                            name: "invoke",
                            location: Location(
                                6..12,
                            ),
                        },
                        bound_types: [
                            Named(
                                NamedType {
                                    name: Path {
                                        root: [],
                                        name: Type {
                                            name: Identifier {
                                                name: "T",
                                                location: Location(
                                                    13..14,
                                                ),
                                            },
                                            bound_types: [],
                                            location: Location(
                                                13..14,
                                            ),
                                        },
                                        location: Location(
                                            13..14,
                                        ),
                                    },
                                },
                            ),
                        ],
                        location: Location(
                            6..15,
                        ),
                    },
                    location: Location(
                        6..15,
                    ),
                },
                arguments: [],
                location: Location(
                    6..17,
                ),
            },
        ),
    ),
]
