compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@operator_method.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"\n        impl Foo {\n            pub fn ==() -> Boolean {\n                return true;\n            }\n        }\")"
---
[
    Impl(
        Implementation {
            name: Named(
                NamedType {
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: Location(
                                    14..17,
                                ),
                            },
                            type_arguments: [],
                            location: Location(
                                14..17,
                            ),
                        },
                        location: Location(
                            14..17,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Some(
                        Public {
                            location: Location(
                                32..35,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "==",
                        location: Location(
                            39..41,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Named(
                            NamedType {
                                name: Path {
                                    root: [],
                                    name: Type {
                                        name: Identifier {
                                            name: "Boolean",
                                            location: Location(
                                                47..54,
                                            ),
                                        },
                                        type_arguments: [],
                                        location: Location(
                                            47..54,
                                        ),
                                    },
                                    location: Location(
                                        47..54,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Some(
                        Block {
                            statements: [
                                Return(
                                    Return {
                                        value: Some(
                                            Literal(
                                                Boolean(
                                                    BooleanLiteral {
                                                        value: true,
                                                        location: Location(
                                                            80..84,
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                        location: Location(
                                            73..85,
                                        ),
                                    },
                                ),
                            ],
                            location: Location(
                                55..99,
                            ),
                        },
                    ),
                    location: Location(
                        32..99,
                    ),
                    documentation: None,
                },
            ],
            type_parameters: [],
            location: Location(
                9..109,
            ),
        },
    ),
]
