compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@property.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"\n        struct Foo {\n            x: Int32 = 0;\n        }\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        16..19,
                    ),
                },
                builtin: false,
                properties: [
                    Property {
                        visibility: Private(
                            Private {
                                location: Location(
                                    34..35,
                                ),
                            },
                        ),
                        name: Identifier {
                            name: "x",
                            location: Location(
                                34..35,
                            ),
                        },
                        property_type: Scalar(
                            ScalarType {
                                name: Path {
                                    root: [],
                                    name: PathSegment {
                                        name: Identifier {
                                            name: "Int32",
                                            location: Location(
                                                37..42,
                                            ),
                                        },
                                        type_arguments: [],
                                        location: Location(
                                            37..42,
                                        ),
                                    },
                                    location: Location(
                                        37..42,
                                    ),
                                },
                            },
                        ),
                        default_value: Some(
                            Literal(
                                Int(
                                    IntLiteral {
                                        value: 0,
                                        location: Location(
                                            45..46,
                                        ),
                                        kind: I32,
                                    },
                                ),
                            ),
                        ),
                        location: Location(
                            34..47,
                        ),
                        documentation: None,
                    },
                ],
                type_parameters: [],
                location: Location(
                    9..57,
                ),
                documentation: None,
            },
        ),
    ),
]
